[package]
name = "putzen-cli"
description = "helps keeping your disk clean of build and dependency artifacts safely"
version = "1.0.7"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license = "GPL-3.0-only"
keywords = ["commandline", "cleanup"]
categories = ["command-line-utilities"]
repository = "https://github.com/sassman/putzen-rs"
include = ["src/**/*", "LICENSE", "*.md"]

[dependencies]
argh = "0.1"
dialoguer = "0.10"
jwalk = "0.8"

[target.'cfg(target_family = "windows")'.dependencies]
remove_dir_all = "0.8.0"

[[bin]]
name = "putzen"
path = "src/bin/putzen.rs"
