[package]
name = "putzen-cli"
description = "helps keeping your disk clean of build and dependency artifacts safely"
version = "2.0.1"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license = "GPL-3.0-only"
keywords = ["commandline", "cleanup"]
categories = ["command-line-utilities"]
repository = "https://github.com/sassman/putzen-rs"
include = ["src/**/*", "LICENSE", "*.md"]

[dependencies]
argh = "0.1"
dialoguer = "0.11"
jwalk = "0.8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_family = "windows")'.dependencies]
remove_dir_all = "1.0.0"

[[bin]]
name = "putzen"
path = "src/bin/putzen.rs"
