[package]
name = "putzen-cli"
description = "helps keeping your disk clean of build and dependency artifacts safely"
version = "3.0.1"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license = "GPL-3.0-only"
keywords = ["commandline", "cleanup"]
categories = ["command-line-utilities"]
repository = "https://github.com/sassman/putzen-rs"
include = ["src/**/*", "LICENSE", "*.md"]

[features]
default = ["highscore-board"]
highscore-board = ["dep:toml", "dep:dirs-lite", "dep:jiff", "dep:serde"]

[dependencies]
argh = "0.1"
dialoguer = "0.12"
jwalk = "0.8"
serde = { version = "1", optional = true, features = ["derive"] }
toml = { version = "1.0", optional = true }
dirs-lite = { version = "1", optional = true, default-features = false, features = ["favor-xdg-style"] }
jiff = { version = "0.2", optional = true, default-features = false, features = ["std", "tz-system"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_family = "windows")'.dependencies]
remove_dir_all = "1.0.0"

[[bin]]
name = "putzen"
path = "src/bin/putzen.rs"
